--- a/style.css
+++ b/style.css
@@ -14,21 +14,77 @@ li {
 .right-align {
     text-align: right;
 }
+.magnify {
+    height: 30px;
+    float: left;
+    width: 20px;
+    padding-top: 15px;
+    padding-left: 15px;
 }
-a.sign-in {
-    background-color: #0075ffba;
+.about{
+    padding-right: 10px;
 }
 
+.gmail{
+    padding-right: 10px;
+}
+.apps{
+    padding-right: 10px;
+    height: 20px;
+    width: 20px;
+}
+
+.images{
+    padding-right: 10px;
+}
+
+.bottom{
+    padding-right: 10px;
+}
+
+a{
+    color: black;
+    text-decoration: none;
+}
+a.sign-in {
+    border-radius: 0.1em;
+    padding: 5px 10px;
+    color: white;
+    background-color: #43aaf3;
+    text-decoration: none;
+}
+.border{
+    border-radius: 5em;
+    margin: 30px auto;
+    width: 500px;
+    padding: 0;
+    border: 1px;
+    border-color: #adaaaa;
+    border-style: solid;
+}
 .center{
-    margin-top: 25%;
+    margin-top: 15%;
     text-align: center;
 }
-.search{
-    margin-top: 25px;
+.search-box-input{
     margin-left: auto;
     margin-right: auto;
-    display: block;
-    width: 150px;
+    width: 300px;
+    outline: none;
+    height: 45px;
+    border-style: none;
+}
+.microphone{
+    height: 25px;
+    width: auto;
+    padding-top: 15px;
+    padding-left: 90px;
+}
+
+.button{
+    border-radius: 0.5em;
+    background-color: #e7e7e7;
+    padding: 10px;
 }
 
 #page-container {
@@ -41,8 +97,12 @@ a.sign-in {
 }
 
 #footer {
-    position: absolute;
-    bottom: 0;
+    background-color: #f2f2f2;
     width: 100%;
-    height: 2.5rem;
+    border-top: 1px solid rgb(209, 206, 206);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: 45px;
+    padding-top: 15px;
 }
